--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -12,7 +12,20 @@ logo_mindioso.png: logo_mindioso-769d82a879e7beeb709fc0cca30f5da6.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 tmp_whatsfun_screenshot.jpg: tmp_whatsfun_screenshot-b4b67c7ae5e421d7c660a7822415cbb7.jpg
 twitter_16.png: twitter_16-4d2d0a7a2919d0b57c1673299445e0ed.png
-application.js: application-b5addc23f0db078e17cc143bb457a18f.js
-application.css: application-73a6eadbed3e94a563e69d5ff3902bab.css
+application.js: application-3aef16e1df6c3151d6e4a2477bb257bc.js
+application.css: application-72704814f489d1111e63d0bc0c1481a3.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
+jquery-ui/ui-bg_flat_0_aaaaaa_40x100.png: jquery-ui/ui-bg_flat_0_aaaaaa_40x100-a1eb3e0764573ed4b261ca742ed96ac3.png
+jquery-ui/ui-bg_flat_75_ffffff_40x100.png: jquery-ui/ui-bg_flat_75_ffffff_40x100-841636c8f8d33987bb8d2f31e8ef92ca.png
+jquery-ui/ui-bg_glass_55_fbf9ee_1x400.png: jquery-ui/ui-bg_glass_55_fbf9ee_1x400-bbb04adbe79f471d8c88a2bc691231b6.png
+jquery-ui/ui-bg_glass_65_ffffff_1x400.png: jquery-ui/ui-bg_glass_65_ffffff_1x400-a30aa544902182c133dbb46ac40a08d2.png
+jquery-ui/ui-bg_glass_75_dadada_1x400.png: jquery-ui/ui-bg_glass_75_dadada_1x400-38ed9f33e066d6bee977c567d4b03650.png
+jquery-ui/ui-bg_glass_75_e6e6e6_1x400.png: jquery-ui/ui-bg_glass_75_e6e6e6_1x400-3e20bce1b7b2f5dd47ca6ac361805162.png
+jquery-ui/ui-bg_glass_95_fef1ec_1x400.png: jquery-ui/ui-bg_glass_95_fef1ec_1x400-c723e9a2b50006c6054836a10b76bb84.png
+jquery-ui/ui-bg_highlight-soft_75_cccccc_1x100.png: jquery-ui/ui-bg_highlight-soft_75_cccccc_1x100-081f36ef02c9233c6db45d2d566fbecd.png
+jquery-ui/ui-icons_222222_256x240.png: jquery-ui/ui-icons_222222_256x240-1bca65a97a49d7d05ab2f3dc83b97cd5.png
+jquery-ui/ui-icons_2e83ff_256x240.png: jquery-ui/ui-icons_2e83ff_256x240-efb394f4417cc6bd4177a1999474e1eb.png
+jquery-ui/ui-icons_454545_256x240.png: jquery-ui/ui-icons_454545_256x240-17e6740beb176dd87da44be76c94bb47.png
+jquery-ui/ui-icons_888888_256x240.png: jquery-ui/ui-icons_888888_256x240-5b928d6b862809eb8130d7b7e0b51a1d.png
+jquery-ui/ui-icons_cd0a0a_256x240.png: jquery-ui/ui-icons_cd0a0a_256x240-635d34cf8bf22d711a729017ab9aaebe.png
